Создано с помощью Colaboratory

--- a/baseline_keras_xception_car_class_v2_4.ipynb
+++ b/baseline_keras_xception_car_class_v2_4.ipynb
@@ -46,7 +46,7 @@
         "colab_type": "text"
       },
       "source": [
-        "> Это пример решения задачи с использованием Keras. Вы можете использовать этот кернер для дальнейших исследований и экспериментов.\n",
+        "> Это пример решения задачи с использованием  transfer learning с fine-tuning\n",
         "# Классификация изображений\n",
         "\n",
         "### Основная идея этого решения: взять предобученую на ImageNet сеть Xception и дообучить под нашу задачу. \n",
