Создано с помощью Colaboratory

--- a/fite_tuning_EfficientNetB0.ipynb
+++ b/fite_tuning_EfficientNetB0.ipynb
@@ -615,7 +615,7 @@
         "    base_model.trainable = mode_train\n",
         "\n",
         "    if fine_tune_at > 0 :\n",
-        "# Замораживаем все первые перед fine_tune_at слоев\n",
+        "# Замораживаем все первые перед fine_tune_at слоями\n",
         "      for layer in model.layers[:fine_tune_at]:\n",
         "            layer.trainable =  False\n",
         "\n",
@@ -958,6 +958,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mIlXpQFXzMT_",
+        "colab_type": "text"
+      },
+      "source": [
+        "А вот на четвертом шаге, что-то пошло не так. Прервем обучение, внесем коррективы и продолжим."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "EOM26t77nO0R",
@@ -1140,9 +1150,9 @@
       "source": [
         "Обучение на четвертом шаге медленно , но верно улучшает точность и дает 93,39%. Возможно, стоит взять большее число эпох.\n",
         "\n",
-        "Заключительный шаг  - точность растет , но медленно. Конечный на ваидации результат всего 93.73%. Можно попробовать увеличить число эпох. \n",
+        "Заключительный шаг  - точность растет , но медленно. Конечный на валидации результат всего 93.73%. Можно попробовать увеличить число эпох. \n",
         "\n",
-        "На текущий момент результат хуже , чем fine-tuning с xception(около 96 %)"
+        "На текущий момент результат хуже , чем fine-tuning с Xception(около 96 %)"
       ]
     },
     {
