Создано с помощью Colaboratory

--- a/fine_tuning_EfficientNetB7.ipynb
+++ b/fine_tuning_EfficientNetB7.ipynb
@@ -456,9 +456,7 @@
         "    class_mode=None,\n",
         "    seed=RANDOM_SEED,\n",
         "    target_size=(IMG_SIZE, IMG_SIZE),\n",
-        "    batch_size=BATCH_SIZE,)\n",
-        "\n",
-        "# Обратите внимание, что для сабмита мы используем другой источник test_datagen.flow_from_dataframe. Как вы думаете, почему?"
+        "    batch_size=BATCH_SIZE,)\n"
       ],
       "execution_count": 16,
       "outputs": [
